--- a/com.sevenmartsupermarket/test-output/index.html
+++ b/com.sevenmartsupermarket/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\MaluL\AppData\Local\Temp\testng-eclipse--1974825212\testng-customsuite.xml</span>
+                    <span>C:\Users\MaluL\AppData\Local\Temp\testng-eclipse-1981167994\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.sevenmartsupermarket.tests.AdminUsersTest" class="method navigator-link" hash-for-method="verifyAdminTableCancelAlert">verifyAdminTableCancelAlert</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.sevenmartsupermarket.tests.CategoriesTest" class="method navigator-link" hash-for-method="verifyDeleteCategoryFromTable">verifyDeleteCategoryFromTable</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.sevenmartsupermarket.tests.AdminUsersTest</span>
+              <span class="class-name">com.sevenmartsupermarket.tests.CategoriesTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyAdminTableCancelAlert">
-                  </a> <!-- verifyAdminTableCancelAlert -->
-                  <span class="method-name">verifyAdminTableCancelAlert</span>
+                  <a name="verifyDeleteCategoryFromTable">
+                  </a> <!-- verifyDeleteCategoryFromTable -->
+                  <span class="method-name">verifyDeleteCategoryFromTable</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\MaluL\AppData\Local\Temp\testng-eclipse--1974825212\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\MaluL\AppData\Local\Temp\testng-eclipse-1981167994\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.sevenmartsupermarket.tests.AdminUsersTest&quot;&gt;
+      &lt;class name=&quot;com.sevenmartsupermarket.tests.CategoriesTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verifyAdminTableCancelAlert&quot;/&gt;
+          &lt;include name=&quot;verifyDeleteCategoryFromTable&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.sevenmartsupermarket.tests.AdminUsersTest --&gt;
+      &lt;/class&gt; &lt;!-- com.sevenmartsupermarket.tests.CategoriesTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyAdminTableCancelAlert')
-data.setCell(0, 2, 'com.sevenmartsupermarket.tests.AdminUsersTest')
-data.setCell(0, 3, 7236);
+data.setCell(0, 1, 'verifyDeleteCategoryFromTable')
+data.setCell(0, 2, 'com.sevenmartsupermarket.tests.CategoriesTest')
+data.setCell(0, 3, 5294);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,29 +213,21 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">9 ignored methods</span>
+            <span class="header-content">5 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.sevenmartsupermarket.tests.AdminUsersTest</span>
+              <span class="ignored-class-name">com.sevenmartsupermarket.tests.CategoriesTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">verifyAdminUserDeleteBtn</span>
+                <span class="ignored-method-name">verifyGoHome</span>
                 <br/>
-                <span class="ignored-method-name">verifyNewUserAlert</span>
+                <span class="ignored-method-name">verifySearchResetButton</span>
                 <br/>
-                <span class="ignored-method-name">verifyAllAdminTableNames</span>
-                <br/>
-                <span class="ignored-method-name">verifySearchBtnAlreadyDeleteUserMsg</span>
-                <br/>
-                <span class="ignored-method-name">verifySearchUser</span>
-                <br/>
-                <span class="ignored-method-name">verifyAlreadyExistUserAlert</span>
-                <br/>
-                <span class="ignored-method-name">verifySearchBtnTableDeleteAction</span>
+                <span class="ignored-method-name">verifyCreateCategory</span>
                 <br/>
                 <span class="ignored-method-name">verifyResetButton</span>
                 <br/>
-                <span class="ignored-method-name">verifyReadExcel</span>
+                <span class="ignored-method-name">verifySearchCategory</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -247,18 +239,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.sevenmartsupermarket.tests.AdminUsersTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.sevenmartsupermarket.tests.CategoriesTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">launchBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyAdminTableCancelAlert</span>
-                <span class="method-start">6562 ms</span>
+                <span class="method-name">verifyDeleteCategoryFromTable</span>
+                <span class="method-start">10126 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">terminateSession([TestResult name=verifyAdminTableCancelAlert status=SUCCESS method=AdminUsersTest.verifyAdminTableCa...)</span>
-                <span class="method-start">13805 ms</span>
+                <span class="method-name">terminateSession([TestResult name=verifyDeleteCategoryFromTable status=SUCCESS method=CategoriesTest.verifyDeleteCate...)</span>
+                <span class="method-start">15447 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
