--- a/com.sevenmartsupermarket/test-output/index.html
+++ b/com.sevenmartsupermarket/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\MaluL\AppData\Local\Temp\testng-eclipse-1771022878\testng-customsuite.xml</span>
+                    <span>C:\Users\MaluL\AppData\Local\Temp\testng-eclipse-36639889\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.sevenmartsupermarket.tests.SubCategoriesTest" class="method navigator-link" hash-for-method="verifyCreateSubCategoryButton">verifyCreateSubCategoryButton</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.sevenmartsupermarket.tests.AdminUsersTestCase" class="method navigator-link" hash-for-method="verifyDeleteEntriesFromTable">verifyDeleteEntriesFromTable</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.sevenmartsupermarket.tests.SubCategoriesTest</span>
+              <span class="class-name">com.sevenmartsupermarket.tests.AdminUsersTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyCreateSubCategoryButton">
-                  </a> <!-- verifyCreateSubCategoryButton -->
-                  <span class="method-name">verifyCreateSubCategoryButton</span>
+                  <a name="verifyDeleteEntriesFromTable">
+                  </a> <!-- verifyDeleteEntriesFromTable -->
+                  <span class="method-name">verifyDeleteEntriesFromTable</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\MaluL\AppData\Local\Temp\testng-eclipse-1771022878\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\MaluL\AppData\Local\Temp\testng-eclipse-36639889\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.sevenmartsupermarket.tests.SubCategoriesTest&quot;&gt;
+      &lt;class name=&quot;com.sevenmartsupermarket.tests.AdminUsersTestCase&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verifyCreateSubCategoryButton&quot;/&gt;
+          &lt;include name=&quot;verifyDeleteEntriesFromTable&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.sevenmartsupermarket.tests.SubCategoriesTest --&gt;
+      &lt;/class&gt; &lt;!-- com.sevenmartsupermarket.tests.AdminUsersTestCase --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyCreateSubCategoryButton')
-data.setCell(0, 2, 'com.sevenmartsupermarket.tests.SubCategoriesTest')
-data.setCell(0, 3, 5355);
+data.setCell(0, 1, 'verifyDeleteEntriesFromTable')
+data.setCell(0, 2, 'com.sevenmartsupermarket.tests.AdminUsersTestCase')
+data.setCell(0, 3, 4190);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,21 +213,39 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">5 ignored methods</span>
+            <span class="header-content">14 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.sevenmartsupermarket.tests.SubCategoriesTest</span>
+              <span class="ignored-class-name">com.sevenmartsupermarket.tests.AdminUsersTestCase</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">verifyEditCategoryFromTable</span>
+                <span class="ignored-method-name">verifyAdminTableCancelAlert</span>
                 <br/>
-                <span class="ignored-method-name">verifySearchSubCategory</span>
+                <span class="ignored-method-name">verifyIsClickableOfNewAdminUsersUserButton</span>
                 <br/>
-                <span class="ignored-method-name">verifyDeleteCategoryFromTable</span>
+                <span class="ignored-method-name">verifyCancelAlertMessageOfSearchTable</span>
                 <br/>
-                <span class="ignored-method-name">verifyGoHome</span>
+                <span class="ignored-method-name">verifyAdminusersTitle</span>
                 <br/>
-                <span class="ignored-method-name">verifySearchResetSubCategory</span>
+                <span class="ignored-method-name">verifyAdminTableEditButton</span>
+                <br/>
+                <span class="ignored-method-name">verifyAdminTableInActiveButton</span>
+                <br/>
+                <span class="ignored-method-name">verifyClickAdminUserMoreInfo</span>
+                <br/>
+                <span class="ignored-method-name">verifyAlreadyExistUserAlertMessage</span>
+                <br/>
+                <span class="ignored-method-name">verifySearchBtnResultNotFoundMsg</span>
+                <br/>
+                <span class="ignored-method-name">verifyResetButtonIsClickable</span>
+                <br/>
+                <span class="ignored-method-name">verifyAdminTableActiveButton</span>
+                <br/>
+                <span class="ignored-method-name">verifySearchUserButtonIsClickable</span>
+                <br/>
+                <span class="ignored-method-name">verifyDeleteEntriesFromSearchBtnTable</span>
+                <br/>
+                <span class="ignored-method-name">verifyIsHomeButtonClickable</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -239,18 +257,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.sevenmartsupermarket.tests.SubCategoriesTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.sevenmartsupermarket.tests.AdminUsersTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">launchBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyCreateSubCategoryButton</span>
-                <span class="method-start">4909 ms</span>
+                <span class="method-name">verifyDeleteEntriesFromTable</span>
+                <span class="method-start">6341 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">terminateSession([TestResult name=verifyCreateSubCategoryButton status=SUCCESS method=SubCategoriesTest.verifyCreateS...)</span>
-                <span class="method-start">10268 ms</span>
+                <span class="method-name">terminateSession([TestResult name=verifyDeleteEntriesFromTable status=SUCCESS method=AdminUsersTestCase.verifyDeleteE...)</span>
+                <span class="method-start">10537 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
