--- a/com.sevenmartsupermarket/test-output/emailable-report.html
+++ b/com.sevenmartsupermarket/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,614</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">21,813</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.sevenmartsupermarket.tests.AdminUsersTestCase</td><td><a href="#m0">verifyDeleteEntriesFromTable</a></td><td rowspan="1">1733370003712</td><td rowspan="1">4190</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.sevenmartsupermarket.tests.ManageContactTest</td><td><a href="#m0">verifyEditEntriesUsingDataProviders</a></td><td rowspan="1">1733424147999</td><td rowspan="1">13371</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.sevenmartsupermarket.tests.AdminUsersTestCase#verifyDeleteEntriesFromTable</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.sevenmartsupermarket.tests.ManageContactTest#verifyEditEntriesUsingDataProviders</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th></tr><tr class="param stripe"><td>45658789</td><td>sample@gmail.com</td><td>Palakkad</td><td>45</td><td>60</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
